package edu.hitsz.aircraft;

public interface BombpropActivateUpdate {
    public void update();
}
